2003-03-15  Lluis Sanchez Gual <lluis@ideary.com>

	* CrossAppDomainChannel.cs: fixes bugs #39380 and #39331.

2003-03-03  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: Minor corrections.
	* CrossAppDomainChannel.cs: Context is now restored when exiting the domain.

2003-02-18  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: Added static property for getting the CrossContextChannel.

2003-02-05  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: Added new constructor in ChannelInfoStore, that is used by
	  ObjRef to create a ChannelInfoStore with user provided channel info.

2003-02-05  Lluis Sanchez Gual  <lluis@ideary.com>

	* CrossAppDomainChannel.cs: Corrected CADSerializer.DeserializeMessage. 
	  Now it uses the method DeserializeMethodResponse to deserialize the message
	  when the msg is provided.	  

2003-02-04  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: Modified to work with new types of identities.

2003-02-03 Patrik Torstensson

	* CrossAppDomainChannel.cs: Implemented cross appdomain marshalling via cross 
	app domain messages (smuggling objects between domains)

2002-12-29  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: corrected generation of exception in SyncDispatchMessage.

2002-12-28  Patrik Torstensson
	* CrossAppDomainChannel.cs: First version, without support for "going" into the right domain

2002-12-26  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: small correction in CreateClientChannelSinkChain.
	* ChannelDataStore.cs: added Serializable attribute.

2002-12-20  Lluis Sanchez Gual  <lluis@ideary.com>

	* ChannelServices.cs: added internal method for creating client 
	  channel sink. Implemented some other methods.
	* ClientChannelSinkStack.cs: implemented most of methods.
	* ServerChannelSinkStack.cs: implemented most of methods.
	* ChannelSinkStackEntry.cs: added
	* ServerDispatchSink.cs: ProcessMessage now forwards messages