@@ -14,38 +14,47 @@ namespace System.Runtime.Remoting.Channels
 	[Serializable]
 	public class ChannelDataStore : IChannelDataStore
 	{
-		string[] channelUris;
-		Hashtable hash;
+		string[] _channelURIs;
+		DictionaryEntry[] _extraData;
 		
 		public ChannelDataStore (string[] uris)
 		{
-			channelUris = uris;
+			_channelURIs = uris;
 		}
 
 		public string[] ChannelUris
 		{
 			get {
-				return channelUris;
+				return _channelURIs;
 			}
 			set {
-				channelUris = value;
+				_channelURIs = value;
 			}
 		}
 
 		public object this[object key]
 		{
 			get {
-				if (hash == null)
-					hash = new Hashtable ();
-				
-				return hash [key];
+				if (_extraData == null) return null;
+
+				foreach (DictionaryEntry entry in _extraData)
+					if (entry.Key.Equals (key)) return entry.Value;
+
+				return null;
 			}
 
 			set {
-				if (hash == null)
-					hash = new Hashtable ();
-				
-				hash [key] = value;
+				if (_extraData == null)
+				{
+					_extraData = new DictionaryEntry [] { new DictionaryEntry (key, value) };
+				}
+				else
+				{
+					DictionaryEntry[] tmpData = new DictionaryEntry [_extraData.Length + 1];
+					_extraData.CopyTo (tmpData, 0);
+					tmpData [_extraData.Length] = new DictionaryEntry (key, value);
+					_extraData = tmpData;
+				}
 			}
 		}
 	}
